--- a/diablo.cabal
+++ b/diablo.cabal
@@ -26,3 +26,21 @@ executable diablo
                        containers
   -- hs-source-dirs:      
   default-language:    Haskell2010
+
+
+executable diabloSnap
+  main-is:             MainSnap.hs
+  ghc-options:         -main-is MainSnap
+  -- other-modules:       
+  -- other-extensions:    
+  build-depends:       base >=4.7 && <4.8,
+                       bytestring,
+                       mtl,
+                       aeson,
+                       wreq,
+                       lens,
+                       containers,
+                       snap-core,
+                       snap-server
+  -- hs-source-dirs:      
+  default-language:    Haskell2010
